istio-settings/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generic-vs
  namespace: istio-system
spec:
  hosts:
    - "local.cmoreira.dev"  # seu domínio
  gateways:
    - istio-gw
  http:
    - match:
        - uri:
            prefix: "/echo"
      route:
        - destination:
            host: echoserver-service.echoserver-ns.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/argocd"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
